Fix footer spacing for social icons

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -457,6 +457,7 @@ footer {
   .social-icons {
     display: flex;
     object-fit: cover;
+    gap: 1.25rem;
     
     img {
       transition: 200ms;
